--- a/templates/base.html
+++ b/templates/base.html
@@ -126,8 +126,8 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'create_interview' %}">
-                                <i class="bi bi-plus-circle"></i> New Interview
+                            <a class="nav-link btn btn-success text-white ms-2 me-2" href="{% url 'create_interview' %}">
+                                <i class="bi bi-mic-fill"></i> Start Interview
                             </a>
                         </li>
                         <li class="nav-item">
