--- a/templates/interviews/interview_detail.html
+++ b/templates/interviews/interview_detail.html
@@ -131,7 +131,7 @@
                     </div>
                     <div class="card-body">
                         {% for category, feedback in feedback_by_category.items %}
-                            <h6 class="text-capitalize">{{ category|replace:"_":" " }}</h6>
+                            <h6 class="text-capitalize">{{ category }}</h6>
                             
                             {% if feedback.strengths %}
                                 <div class="mb-3">
