--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -146,6 +146,10 @@
             Username: demo<br>
             Password: demo123
         </div>
+
+        <div class="signup-link" style="text-align: center; margin-top: 20px; font-size: 14px;">
+            Don't have an account? <a href="{% url 'signup' %}" style="color: #4fc3f7; text-decoration: none; font-weight: 600;">Sign up here</a>
+        </div>
     </div>
 </body>
 </html>
